Ensuing commit, refinding HTML tags and data

--- a/application_botsp.html
+++ b/application_botsp.html
@@ -40,7 +40,7 @@
     <div class="req_outer">
         <div class="pad_add container-fluid p-3 bg-dark text-white">
             <h1>STANDARD REQUEST REGULATOR</h1>
-            <p>Written By Avis Khatiwada w/ Golang</p>
+            <p>Written By Frenzix with Golang</p>
         </div>
 
         <div class="container">
